# AlphaEngine

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  LICENCE.txt  Makefile  README.md  frag.spv  vert.spv
Control/: CMakeLists.txt  Dummy.cpp  MainLoop.cpp  Settings.hpp
EventEngine/: CMakeLists.txt  Dispatch.cpp  Dispatch.hpp  Event.hpp  EventEngine.cpp  EventEngine.hpp
Infrastructure/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Color.hpp  Exception.hpp  Font.cpp  Font.hpp  GameModule.hpp  Image.cpp  Image.hpp  Log.cpp  Log.hpp  Settings.cpp  Settings.hpp  Subsystem.cpp  Subsystem.hpp  Time.cpp  Time.hpp  Transform.cpp  Transform.hpp  Version.cpp  Version.hpp  singleton.hpp
Mathematics/: CMakeLists.txt  Math.hpp  Matrix3.cpp  Matrix4.cpp  Vector2.cpp  Vector4.cpp  Vector4.hpp
MediaLayer/: CMakeLists.txt  Events.cpp  Events.hpp  MediaLayer.cpp  MediaLayer.hpp  Window.cpp  Window.hpp  Window_Win32.cpp  Window_X11.cpp
RenderingEngine/: CMakeLists.txt  Camera.cpp  Camera.hpp  Color.hpp  Geometry.cpp  Geometry.hpp  Image.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ObjLoader.hpp  RenderOptions.hpp  Renderer.cpp  Renderer.hpp  RenderingEngine.cpp  RenderingEngine.hpp  Vertex.hpp  Window.cpp  Window.hpp
RenderingEngine/Camera/: Camera.cpp  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
RenderingEngine/Cameras/: Camera.cpp  Camera.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
RenderingEngine/ImageLoading/: CMakeLists.txt  Image.cpp  Image.hpp  stb_image.c  stb_image.h
RenderingEngine/Mesh/: Mesh.cpp  Mesh.hpp  ObjLoader.cpp  ObjLoader.hpp  Vertex.hpp
RenderingEngine/MeshLoading/: Mesh.cpp  Mesh.hpp  ObjLoader.hpp  Vertex.hpp
RenderingEngine/OpenGL/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.hpp  OpenGL.cpp  OpenGL.hpp  Program.cpp  Program.hpp  Renderbuffer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Typedef.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
RenderingEngine/Renderables/: Cube.cpp  Cube.hpp  Model.cpp  Model.hpp  Overlay.cpp  Overlay.hpp  Pane.cpp  Pane.hpp  Renderable.cpp  Renderable.hpp
RenderingEngine/Renderers/: BasicRenderer.cpp  BasicRenderer.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  RenderOptions.hpp  Renderer.cpp  Renderer.hpp
RenderingEngine/StandardRenderer/: StandardRenderer.hpp
RenderingEngine/UserInterface/: UserInterface.cpp  UserInterface.hpp
RenderingEngine/Util/: Color.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  Transform.cpp  Transform.hpp
RenderingEngine/libjpeg/: CMakeLists.txt
RenderingEngine/libpng/: CMakeLists.txt
RenderingEngine/zlib/: CMakeLists.txt
Utilities/zlib/: CMakeLists.txt
rendering_engine/: CMakeLists.txt  fog.hpp  render_stats.hpp  rendering_engine.cpp  rendering_engine.hpp  window.cpp  window.hpp
rendering_engine/assets/: CMakeLists.txt  asset_cache.cpp  asset_cache.hpp  asset_device.cpp  asset_device.hpp  font_asset.hpp  mesh_asset.cpp  mesh_asset.hpp  texture_asset.cpp  texture_asset.hpp
rendering_engine/camera/: CMakeLists.txt  camera.cpp  camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp
rendering_engine/debug/: CMakeLists.txt  axes_helper.cpp  axes_helper.hpp  box_edges.hpp  box_helper.cpp  box_helper.hpp  camera_helper.cpp  camera_helper.hpp  directional_light_helper.cpp  directional_light_helper.hpp  grid_helper.cpp  grid_helper.hpp  helper.cpp  helper.hpp  infinite_grid.cpp  infinite_grid.hpp  line_helper.cpp  line_helper.hpp  point_light_helper.cpp  point_light_helper.hpp
rendering_engine/debug_ui/: CMakeLists.txt  imgui_layer.cpp  imgui_layer.hpp
rendering_engine/gpu/: CMakeLists.txt  bind_group.hpp  buffer.hpp  command_encoder.cpp  command_encoder.hpp  device.cpp  device.hpp  factory.cpp  handle.hpp  pipeline.hpp  render_target.hpp  shader.hpp  shader_compiler.cpp  shader_compiler.hpp  texture.hpp  types.hpp
rendering_engine/ibl/: CMakeLists.txt  environment.cpp  environment.hpp
rendering_engine/lighting/: CMakeLists.txt  ambient_light.cpp  ambient_light.hpp  directional_light.cpp  directional_light.hpp  light.cpp  light.hpp  lights_ubo.cpp  lights_ubo.hpp  point_light.cpp  point_light.hpp
rendering_engine/material/: material.cpp  material.hpp
rendering_engine/materials/: CMakeLists.txt  basic_material.cpp  basic_material.hpp  grid_material.cpp  grid_material.hpp  instanced_material.cpp  instanced_material.hpp  line_material.cpp  line_material.hpp  lit_material.cpp  lit_material.hpp  material.cpp  material.hpp  phong_material.cpp  phong_material.hpp  points_material.cpp  points_material.hpp  standard_material.cpp  standard_material.hpp  ui_material.cpp  ui_material.hpp
rendering_engine/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp  tangent.cpp  tangent.hpp  vertex.hpp
rendering_engine/opengl/: cube_texture.cpp  cube_texture.hpp  framebuffer.cpp  framebuffer.hpp  opengl.cpp  opengl.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  typedef.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
rendering_engine/passes/: CMakeLists.txt  debug_pass.cpp  debug_pass.hpp  pass.hpp  point_shadow_pass.cpp  point_shadow_pass.hpp  scene_pass.cpp  scene_pass.hpp  shadow_pass.cpp  shadow_pass.hpp  skybox_pass.cpp  skybox_pass.hpp  ui_pass.cpp  ui_pass.hpp
rendering_engine/render_graph/: CMakeLists.txt  frame_graph.cpp  frame_graph.hpp
rendering_engine/renderables/: CMakeLists.txt  draw_item.hpp  instanced_mesh.cpp  instanced_mesh.hpp  line.cpp  line.hpp  model.cpp  model.hpp  points.cpp  points.hpp  renderable.hpp
rendering_engine/renderers/: basic_renderer.cpp  basic_renderer.hpp  overlay_renderer.cpp  overlay_renderer.hpp  render_options.hpp  renderer.cpp  renderer.hpp
rendering_engine/util/: CMakeLists.txt  color.hpp  font.cpp  font.hpp  image.cpp  image.hpp  transform.cpp  transform.hpp
tests/: CMakeLists.txt
tests/core/: event_bus_test.cpp  jobs_test.cpp  pool_test.cpp  (+1 more)
(+620 files in other folders)
